src/objects/PSA_Card_Transaction_Stage__c.object
<CustomObject>
    <description>Stores the results on the integration that processes the corporate charge/credit card transaction feed (supplied by corporate card provider / bank)</description>
    <fields>
        <fullName>PSA_Acquirer_Reference_Data__c</fullName>
        <label>Acquirer Reference Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Alternate_Sales_Tax_Amount__c</fullName>
        <description>In some countries there is more than one value added tax</description>
        <label>Alternate Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Alternate_Tax_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the alternate tax amount is included in the purchase amount</description>
        <label>Alternate Tax Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Billing_Currency__c</fullName>
        <label>Amount in Billing Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Original_Currency__c</fullName>
        <description>The amount of the transaction, in terms of the OriginalCurrencyCode. This will be used to set the expense amount.
Note: If the transaction is brought in by the integration as a debit, this will be a negative value.</description>
        <label>Amount in Original Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Conversion_Rate__c</fullName>
        <label>Billing Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Currency_Conversion_Date__c</fullName>
        <label>Billing Currency Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Currency_Currency_Code__c</fullName>
        <label>Billing Currency- Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction_Stage_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Card Transaction Stage 18-Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Debit_Or_Credit_Indicator__c</fullName>
        <description>D or C</description>
        <label>Debit Or Credit Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_EmployeeId__c</fullName>
        <description>Employee Id provided by Bank of America - for lookup of the corresponding PSA Resource / Salesforce User.</description>
        <label>EmployeeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Category_Code__c</fullName>
        <description>Category of the expense.  On expense creation, a lookup on a mapping of PSA expenses will be used to set any corresponding PSA expense type, if available</description>
        <label>Expense Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Country_Code__c</fullName>
        <description>For setting the expense description and incurred location info on the expense.</description>
        <label>Merchant Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Name__c</fullName>
        <description>For setting the expense description</description>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Postal_Code__c</fullName>
        <label>Merchant Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_State_Province__c</fullName>
        <description>For setting the expense description and incurred location info on the expense.</description>
        <label>Merchant State / Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Merchant_Street_Address__c</fullName>
        <label>Merchant Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Posting_Date__c</fullName>
        <description>Needed for informational purposes, but not for expense creation/processing.</description>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_ProcessorTransactionId__c</fullName>
        <description>External, unique transaction Id provided by Bank of America for each transaction.</description>
        <externalId>true</externalId>
        <label>ProcessorTransactionId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSA_Sales_Tax_Amount__c</fullName>
        <description>Tax paid on goods purchased</description>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Transaction_Date__c</fullName>
        <description>Represents the date that the transaction took place. This will be used to set the incurred date for any expenses created from the transaction.</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WF_Transaction_ID__c</fullName>
        <description>UID from WF Transactions</description>
        <externalId>true</externalId>
        <label>WF Transaction ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>PSA Card Transaction Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_EmployeeId__c</columns>
        <columns>PSA_Merchant_Country_Code__c</columns>
        <columns>PSA_Merchant_Name__c</columns>
        <columns>PSA_Merchant_Postal_Code__c</columns>
        <columns>PSA_Merchant_State_Province__c</columns>
        <columns>PSA_Merchant_Street_Address__c</columns>
        <columns>PSA_Posting_Date__c</columns>
        <columns>PSA_ProcessorTransactionId__c</columns>
        <columns>PSA_Transaction_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCTX-{00000000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Card Transaction Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>